# mosqlimate-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: .bug_report.md.kate-swp  bug_report.md
.github/workflows/: ci.yml  release.yaml
conda/: base.yaml
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini
docs/: macros.py  requirements.txt
docs/reference/: .cli.md.kate-swp  authors.md  baseline.md  cli.md  climate.md  ensemble.md  infodengue.md  models.md  pred_opt.md  predictions.md  score.md
docs/tutorials/: Using Mosqlient from R.ipynb  baseline_model.ipynb  datastore.ipynb  ensemble.ipynb  lstm_model.ipynb  models.ipynb  predictions.ipynb  scoring.ipynb
examples/: Comparison.ipynb  Using Mosqlient from R.ipynb  baseline_model.ipynb  datastore.ipynb  ensemble.ipynb  geodata.py.ipynb  models.ipynb  predictions.ipynb  scoring.ipynb
mosqlient/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  requests.py  types.py  validations.py
mosqlient/_config/: __init__.py  constants.py  globals.py
mosqlient/_utils/: __init__.py  validate.py
mosqlient/datastore/: __init__.py  _climate_get_impl.py  _episcanner_get_impl.py  _infodengue_get_impl.py  _mosquito_get_impl.py  _vegetation_get_impl.py  api.py  climate.py  geodata.py  infodengue.py  models.py  schema.py
mosqlient/forecast/: __init__.py  baseline.py  ensemble.py  lstm.py  viz.py
mosqlient/models/: __init__.py  baseline.py  ensemble.py  score.py  temporal.py  viz.py
mosqlient/prediction_optimize/: __init__.py  pred_opt.py
mosqlient/predictions/: __init__.py
mosqlient/registry/: __init__.py  _author_get_impl.py  _model_delete_impl.py  _model_get_impl.py  _model_impl.py  _model_post_impl.py  _prediction_delete_impl.py  _prediction_get_impl.py  api.py  models.py  (+5 more)
scripts/: .post_generation.py.kate-swp  post_generation.py
tests/: .__init__.py.kate-swp  .test_cli.py.kate-swp  __init__.py  conftest.py  test_baseline.py  test_cli.py  test_client.py  test_config.py  test_datastore_api.py  test_datastore_models.py  test_datastore_schema.py  test_ensemble.py  test_errors.py  test_main.py  test_pred_opt.py  test_registry_api.py  test_registry_models.py  test_registry_schema.py  test_scoring.py  test_types.py  test_utils.py  test_validations.py  test_viz.py
(+15 files in other folders)
