[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mosqlient"
version = "1.3.1"  # changed by semantic-release
description = "client library for the mosqlimate client library"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/Mosqlimate-project/mosqlimate-client"
homepage = "https://github.com/Mosqlimate-project/mosqlimate-client"
keywords = ["data science", "epidemiology", "forecasting"]
packages = [ { include = "mosqlient" } ]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "^3.9.5"
nest-asyncio = "^1.6.0"
requests = "^2.32.2"
types-requests = "^2.32.0.20240523"
pandas = "^2.2.2"
pydantic = "^2.7.3"
scikit-learn = "^1.5.0"
altair = "^5.3.0"
scoringrules = "^0.5.2"
matplotlib = "^3.9.0"
pmdarima = "^2.0.4"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
autoflake = ">=1.4"
black = ">=21.12b0"
isort = ">=5.7.0"
mypy = ">=0.812"
pytest = ">=6.2.2"
pytest-cov = ">=2.11.1"
pytest-randomly = ">=3.5.0"
pytest-sugar = ">=0.9.4"
pytest-xdist = ">=2.2.0"
types-toml = ">=0.10.1"

# tasks
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"

# flake8 plugins
darglint = ">=1.5.8"
flake8 = ">=3.7.0"
flake8-bandit = ">=2.1.2"
flake8-black = ">=0.2.1"
flake8-bugbear = ">=20.11.1"
flake8-builtins = ">=1.5.3"
flake8-comprehensions = ">=3.3.1"
flake8-docstrings = ">=1.5.0"
flake8-pytest-style = ">=1.3.0"
flake8-string-format = ">=0.3.0"
flake8-tidy-imports = ">=4.2.1"
flake8-variables-names = ">=0.0.4"
flake8-quotes = "^3.3.2"
pep8-naming = ">=0.11.1"
pydocstyle = ">=6.1.1"
wps-light = ">=0.15.2"

# docs
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings-python = ">=0.18"

[tool.poetry.scripts]
mosqbench = "mosqlimate.cli:main"

[tool.poetry.group.dev.dependencies]
pip = "^23.3.2"
mypy = "^1.10.0"


[tool.poetry.group.models.dependencies]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "mosqlient"
include_trailing_comma = true
